# llm-psychology

./: .gitignore  README.md  activations-0.pt  activations-1.pt  activations-10.pt  activations-12.pt  activations-13.pt  activations-14.pt  activations-15.pt  activations-16.pt  activations-17.pt  activations-18.pt  activations-19.pt  activations-2.pt  activations-20.pt  activations-21.pt  activations-22.pt  activations-23.pt  activations-24.pt  activations-3.pt  activations-4.pt  activations-5.pt  activations-6.pt  activations-7.pt  activations-8.pt  activations-9.pt  analyze_diffmean_similarity.py  analyze_qwen_diffmean_cosines.py  asch_experiment.py  attn_heads.html  backfill_layer_sweep_oracle.py  cache_response_activations.py  combine_correct_answers.py  combined_bbh_correct.json  combined_bbh_correct_100.json  combined_mmlu_correct.json  combined_mmlu_correct_100.json  correct_questions.json  correct_questions_100.json  diffmean_8_10.json  (+148 more)
.claude/: settings.local.json
QD_results/: qd_1.json  qd_10.json  qd_2.json  qd_4_old.json  qd_5.json  qd_6_old.json  qd_7.json  qd_9.json
QD_results_new/: qd_10.json  qd_2.json  qd_4.json  qd_6.json  qd_7.json  qd_9.json
QD_results_old/: qd_8_old.json
activation_cache/: qwen_mmlu_5_explain_projection_report.html
data_analysis/: analysis_qd_vs_ma.md  bootstrap_qwen_results.py  conformity_analysis.md  plot_qwen_participants.py  projection_correlation_analysis.py  summarize_activation_oracle_outputs.py
experiment_layer_sweep_results/: manifest.json
experiment_layer_sweep_results_last_prompt/: manifest.json
experiment_layer_sweep_smoke/: manifest.json
experiment_layer_sweep_smoke_fixed/: manifest.json
experiment_layer_sweep_smoke_nontrivial/: manifest.json
experiment_layer_sweep_smoke_position_fixed/: manifest.json
explain_qd_results_new/: explain_qd_2.json  explain_qd_3.json  explain_qd_4.json  explain_qd_8.json  (+1 more)
(+1395 files in other folders)
