[project]
name = "llm-psychology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.5.1",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "torch>=2.11.0",
    "transformer-lens>=3.1.0",
    "transformers>=5.7.0",
    "tqdm>=4.67.1",
]
